tests/baselines/reference/getAndSetNotIdenticalType3.errors.txt
==== tests/cases/compiler/getAndSetNotIdenticalType3.ts (3 errors) ====
    class A<T> { foo: T; }
    
    class C<T> {
        data: A<number>;
        get x(): A<number> {
        ~~~~~~~~~~~~~~~~~~~~
            return this.data;
    ~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! getAndSetNotIdenticalType3.ts(5,5): error TS2096: 'get' and 'set' accessor must have the same type.
        set x(v: A<string>) {
        ~~~~~~~~~~~~~~~~~~~~~
            this.data = v;
    ~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~~~~~
!!! getAndSetNotIdenticalType3.ts(9,9): error TS2012: Cannot convert 'A<string>' to 'A<number>':
!!! 	Types of property 'foo' of types 'A<string>' and 'A<number>' are incompatible.
        }
    ~~~~~
!!! getAndSetNotIdenticalType3.ts(8,5): error TS2096: 'get' and 'set' accessor must have the same type.
    }
    
    var x = new C();
    var r = x.x;
    x.x = r;